kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: service-a
spec:
  selector:
    app: service-a
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
